@@ -11,6 +11,7 @@ Version 1.11.2+dev:
    * Updated translations: Chinese (Traditional), Indonesian, Italian, Polish,
      Portuguese, Russian, Vietnamese
  * User interface:
+   * Fixed 'end turn' button's state in MP and title2 issues.
    * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
      text box overflow occurs.
    * Change Difficulty checkbox in Load Game dialog in GUI1 gets disabled if
